Review Request 5351 - fix for search box at narrower window widths and make search go on top of other items below it in the dom (z-index issue created by left aligned filters) - removed hardcoded test for removing current tenant from copy model list

--- a/le-ui/projects/leadprioritization/app/AppCommon/modules/menus/MenusStyles.scss
+++ b/le-ui/projects/leadprioritization/app/AppCommon/modules/menus/MenusStyles.scss
@@ -29,7 +29,9 @@
     display: inline-block;
     vertical-align: top;
     z-index: 10;
-    
+    &.ng-search {
+        z-index: 11;
+    }
     button {
         vertical-align: top;
         margin-left: .45em;
